try to fix about page scroll overflow

--- a/apps/www/src/app/about/about.component.scss
+++ b/apps/www/src/app/about/about.component.scss
@@ -5,6 +5,7 @@
   margin-top: var(--gap-extra-large);
   margin-bottom: 0;
   padding: var(--gap);
+  box-sizing: border-box;
 
   p {
     max-width: 640px;
